--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
- <html>
-  <head>
-   <!-- 1. Load platform.js for polyfill support. -->
+<html>
+
+<head>
+    <!-- 1. Load platform.js for polyfill support. -->
     <script src="bower_components/platform/platform.js"></script>
-   <!-- 2. Use an HTML Import to bring in the element. -->
+    <!-- 2. Use an HTML Import to bring in the element. -->
     <link rel="import" href="bower_components/core-ajax/core-ajax.html">
-  </head>
-  <body>
+    <link rel="import" href="bower_components/core-input/core-input.html">
+</head>
+
+<body>
     <!-- html code goes here -->
+    <h1>Core & Paper Elements</h1>
+    <ul>
+        <li>strong
+            <Basic Text Input : Core</strong>
+                <core-input id="single" placeholder="Type something..."></core-input>
+        </li>
+    </ul>
     <!-- SCRIPTS go below your HTML -->
-  </body>
+</body>
+
 </html>
