--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- 2. Use an HTML Import to bring in the element. -->
     <link rel="import" href="bower_components/core-ajax/core-ajax.html">
     <link rel="import" href="bower_components/core-input/core-input.html">
+    <link rel="import" href="bower_components/paper-input/paper-input.html">
 </head>
 
 <body>
@@ -16,6 +17,10 @@
         <li>strong
             <Basic Text Input : Core</strong>
                 <core-input id="single" placeholder="Type something..."></core-input>
+        </li>
+        <li>
+            <strong>Basic Text Input : Paper</strong>
+            <paper-input label="Type Something" layout vertical></paper-input>
         </li>
     </ul>
     <!-- SCRIPTS go below your HTML -->
